# VSB_NAVY

./: NAVY.sln  README.md
Fractals/: Fractals.csproj  MainWindow.cs  Program.cs  Vector2.cs
Fractals/Properties/: AssemblyInfo.cs
Fractals/Windows/: ImageWindow.cs
Fractals/gtk-gui/: Windows.ImageWindow.cs  gui.stetic
Hopfield/: Hopfield.cs  Hopfield.csproj  Program.cs  letters.cs
Hopfield/Properties/: AssemblyInfo.cs
NAVY/: MainWindow.cs  NAVY.csproj  NetworkDrawer.cs  Program.cs  TrainingDataNode.cs  Vector2.cs
NAVY/ANN/: Connection.cs  Input.cs  Neuron.cs  NeuronNetwork.cs  NeuronsLayer.cs  Perceptron.cs  SaveableObject.cs
NAVY/EA/: Element.cs  Generation.cs  IElementSource.cs  IFunction.cs  ISearchAlgorithm.cs  Range.cs  SOMA.cs
NAVY/Properties/: AssemblyInfo.cs
NAVY/Windows/: MainWindow.cs  NeuronWindow.cs  NewNetworkDialog.cs  TrainerWindow.cs
NAVY/gtk-gui/: MainWindow.cs  NAVY.NeuronWindow.cs  Windows.NewNetworkDialog.cs  Windows.TrainerWindow.cs  gui.stetic
NAVY_Chaos/: NAVY_Chaos.sln
NAVY_Chaos/NAVY_Chaos/: NAVY_Chaos.cpp  NAVY_Chaos.vcxproj  NAVY_Chaos.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
NAVY_Fractals/: CMakeLists.txt  main.cpp  parameters.h  qt_test.py
NAVY_Fractals/drawers/: Drawer.cpp  Drawer.h  FractalDrawer.cpp  FractalDrawer.h  MendelbrotDrawer.cpp  MendelbrotDrawer.h
NAVY_GameOfLife/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  main.cpp
SavedNetworks/: OnePerceptronLogicAnd.xml  OnePerceptronLogicOr.xml  OnePerceptronLogicXor.xml  TreePerceptron.xml
TrainingData/: logic_and.txt  logic_or.txt  logic_xor.txt
(+30 files in other folders)
